Bug 1411640 - Consolidate <radio> bindings and styling across platforms. r=bgrins
MozReview-Commit-ID: p4dxfdpTs3

UltraBlame original commit: 4e49de4bbc6f0647dd82b752e52961106e7d4879

--- a/toolkit/themes/linux/global/radio.css
+++ b/toolkit/themes/linux/global/radio.css
@@ -37,32 +37,37 @@ radio
 -
 container
 ;
+-
+moz
+-
+box
+-
+align
+:
+center
+;
 margin
 :
 2px
 4px
 ;
-border
--
-left
+}
+radio
 :
-2px
-transparent
-;
-border
--
-right
+hover
+{
+color
 :
-2px
-transparent
+-
+moz
+-
+buttonhovertext
 ;
 }
 .
 radio
 -
-spacer
--
-box
+check
 {
 -
 moz
@@ -71,45 +76,9 @@ appearance
 :
 radio
 ;
--
-moz
--
-box
--
-align
-:
-center
-;
 margin
 :
 2px
-;
-border
--
-right
-:
-2px
-solid
-transparent
-;
-}
-.
-radio
--
-label
--
-center
--
-box
-{
--
-moz
--
-box
--
-align
-:
-center
 ;
 }
 .
@@ -172,55 +141,12 @@ radio
 -
 label
 -
-center
--
-box
->
-.
-radio
--
-label
--
 box
 {
-border
+outline
 :
 1px
 dotted
-ThreeDDarkShadow
-;
-}
-radio
-[
-disabled
-=
-"
-true
-"
-]
->
-.
-radio
--
-spacer
--
-box
->
-.
-radio
--
-check
--
-box1
-{
-background
--
-color
-:
--
-moz
--
-Dialog
 ;
 }
 radio
@@ -236,324 +162,4 @@ color
 :
 GrayText
 ;
-}
-.
-radio
--
-check
--
-box1
-{
-border
--
-top
-:
-1px
-solid
-ThreeDShadow
-;
-border
--
-right
-:
-1px
-solid
-ThreeDHighlight
-;
-border
--
-bottom
-:
-1px
-solid
-ThreeDHighlight
-;
-border
--
-left
-:
-1px
-solid
-ThreeDShadow
-;
-border
--
-radius
-:
-50
-%
-;
-min
--
-width
-:
-12px
-;
-min
--
-height
-:
-12px
-;
-background
--
-color
-:
--
-moz
--
-Field
-;
-}
-.
-radio
--
-check
--
-box2
-{
-border
--
-top
-:
-1px
-solid
-ThreeDDarkShadow
-;
-border
--
-right
-:
-1px
-solid
-ThreeDLightShadow
-;
-border
--
-bottom
-:
-1px
-solid
-ThreeDLightShadow
-;
-border
--
-left
-:
-1px
-solid
-ThreeDDarkShadow
-;
-border
--
-radius
-:
-50
-%
-;
-padding
-:
-2px
-;
-width
-:
-4px
-;
-height
-:
-4px
-;
-list
--
-style
--
-image
-:
-none
-;
-}
-radio
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
-:
-hover
-{
-color
-:
--
-moz
--
-buttonhovertext
-;
-text
--
-shadow
-:
-none
-;
-}
-radio
-:
-hover
-:
-active
->
-.
-radio
--
-spacer
--
-box
->
-.
-radio
--
-check
--
-box1
-{
-background
--
-color
-:
--
-moz
--
-Dialog
-;
-}
-radio
-[
-selected
-=
-"
-true
-"
-]
->
-.
-radio
--
-spacer
--
-box
->
-.
-radio
--
-check
--
-box1
->
-.
-radio
--
-check
--
-box2
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-radio
-/
-radio
--
-check
-.
-gif
-"
-)
-;
-}
-radio
-[
-selected
-=
-"
-true
-"
-]
-[
-disabled
-=
-"
-true
-"
-]
->
-.
-radio
--
-spacer
--
-box
->
-.
-radio
--
-check
--
-box1
->
-.
-radio
--
-check
--
-box2
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-radio
-/
-radio
--
-check
--
-dis
-.
-gif
-"
-)
-!
-important
 }
