--- a/toolkit/themes/windows/global/radio.css
+++ b/toolkit/themes/windows/global/radio.css
@@ -83,6 +83,24 @@ end
 .
 radio
 -
+check
+{
+-
+moz
+-
+appearance
+:
+radio
+;
+margin
+:
+1px
+0
+;
+}
+.
+radio
+-
 label
 -
 box
@@ -94,18 +112,6 @@ inline
 start
 :
 2px
-;
-border
-:
-1px
-solid
-transparent
-;
-padding
--
-top
-:
-0px
 ;
 padding
 -
@@ -121,19 +127,14 @@ start
 :
 1px
 ;
-padding
--
-inline
--
-end
-:
-0px
-;
 }
 .
 radio
 -
 icon
+[
+src
+]
 {
 margin
 -
@@ -172,37 +173,10 @@ label
 -
 box
 {
-border
+outline
 :
 1px
 dotted
-ThreeDDarkShadow
-;
-}
-radio
-[
-disabled
-=
-"
-true
-"
-]
->
-.
-radio
--
-check
--
-box1
-{
-background
--
-color
-:
--
-moz
--
-Dialog
 ;
 }
 radio
@@ -251,282 +225,4 @@ shadow
 ThreeDHighlight
 ;
 }
-}
-.
-radio
--
-check
--
-box1
-{
--
-moz
--
-appearance
-:
-radio
-;
-margin
-:
-1px
-0px
-;
-border
--
-top
-:
-1px
-solid
-ThreeDShadow
-;
-border
--
-right
-:
-1px
-solid
-ThreeDHighlight
-;
-border
--
-bottom
-:
-1px
-solid
-ThreeDHighlight
-;
-border
--
-left
-:
-1px
-solid
-ThreeDShadow
-;
-border
--
-radius
-:
-50
-%
-;
-width
-:
-12px
-;
-height
-:
-12px
-;
-background
--
-color
-:
--
-moz
--
-Field
-;
-}
-.
-radio
--
-check
--
-box2
-{
-border
--
-top
-:
-1px
-solid
-ThreeDDarkShadow
-;
-border
--
-right
-:
-1px
-solid
-ThreeDLightShadow
-;
-border
--
-bottom
-:
-1px
-solid
-ThreeDLightShadow
-;
-border
--
-left
-:
-1px
-solid
-ThreeDDarkShadow
-;
-border
--
-radius
-:
-50
-%
-;
-padding
-:
-2px
-;
-width
-:
-4px
-;
-height
-:
-4px
-;
-list
--
-style
--
-image
-:
-none
-;
-}
-radio
-:
-hover
-:
-active
->
-.
-radio
--
-check
--
-box1
-{
-background
--
-color
-:
--
-moz
--
-Dialog
-;
-}
-radio
-[
-selected
-=
-"
-true
-"
-]
->
-.
-radio
--
-check
--
-box1
->
-.
-radio
--
-check
--
-box2
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-radio
-/
-radio
--
-check
-.
-gif
-"
-)
-;
-}
-radio
-[
-selected
-=
-"
-true
-"
-]
-[
-disabled
-=
-"
-true
-"
-]
->
-.
-radio
--
-check
--
-box1
->
-.
-radio
--
-check
--
-box2
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-radio
-/
-radio
--
-check
--
-dis
-.
-gif
-"
-)
-!
-important
 }
