Bug 1413166 - Added parsing tests for moz-gtk-csd-* media features, r=bz
MozReview-Commit-ID: G0fXDJ2Bjwf

UltraBlame original commit: e1ef2adcc815eb23c473d786efff858615e87cc7

--- a/layout/style/test/test_media_queries.html
+++ b/layout/style/test/test_media_queries.html
@@ -7061,6 +7061,68 @@ enabled
 "
 )
 ;
+expression_should_not_be_parseable
+(
+"
+-
+moz
+-
+gtk
+-
+csd
+-
+available
+"
+)
+;
+expression_should_not_be_parseable
+(
+"
+-
+moz
+-
+gtk
+-
+csd
+-
+minimize
+-
+button
+"
+)
+;
+expression_should_not_be_parseable
+(
+"
+-
+moz
+-
+gtk
+-
+csd
+-
+maximize
+-
+button
+"
+)
+;
+expression_should_not_be_parseable
+(
+"
+-
+moz
+-
+gtk
+-
+csd
+-
+close
+-
+button
+"
+)
+;
 expression_should_be_parseable
 (
 "
@@ -7293,6 +7355,76 @@ enabled
 "
 )
 ;
+expression_should_not_be_parseable
+(
+"
+-
+moz
+-
+gtk
+-
+csd
+-
+available
+:
+0
+"
+)
+;
+expression_should_not_be_parseable
+(
+"
+-
+moz
+-
+gtk
+-
+csd
+-
+minimize
+-
+button
+:
+0
+"
+)
+;
+expression_should_not_be_parseable
+(
+"
+-
+moz
+-
+gtk
+-
+csd
+-
+maximize
+-
+button
+:
+0
+"
+)
+;
+expression_should_not_be_parseable
+(
+"
+-
+moz
+-
+gtk
+-
+csd
+-
+close
+-
+button
+:
+0
+"
+)
+;
 expression_should_be_parseable
 (
 "
@@ -7527,6 +7659,76 @@ enabled
 "
 )
 ;
+expression_should_not_be_parseable
+(
+"
+-
+moz
+-
+gtk
+-
+csd
+-
+available
+:
+1
+"
+)
+;
+expression_should_not_be_parseable
+(
+"
+-
+moz
+-
+gtk
+-
+csd
+-
+minimize
+-
+button
+:
+1
+"
+)
+;
+expression_should_not_be_parseable
+(
+"
+-
+moz
+-
+gtk
+-
+csd
+-
+maximize
+-
+button
+:
+1
+"
+)
+;
+expression_should_not_be_parseable
+(
+"
+-
+moz
+-
+gtk
+-
+csd
+-
+close
+-
+button
+:
+1
+"
+)
+;
 expression_should_be_parseable
 (
 "
@@ -7796,6 +7998,80 @@ expression_should_not_be_parseable
 -
 moz
 -
+gtk
+-
+csd
+-
+available
+:
+-
+1
+"
+)
+;
+expression_should_not_be_parseable
+(
+"
+-
+moz
+-
+gtk
+-
+csd
+-
+minimize
+-
+button
+:
+-
+1
+"
+)
+;
+expression_should_not_be_parseable
+(
+"
+-
+moz
+-
+gtk
+-
+csd
+-
+maximize
+-
+button
+:
+-
+1
+"
+)
+;
+expression_should_not_be_parseable
+(
+"
+-
+moz
+-
+gtk
+-
+csd
+-
+close
+-
+button
+:
+-
+1
+"
+)
+;
+expression_should_not_be_parseable
+(
+"
+-
+moz
+-
 scrollbar
 -
 start
@@ -8019,6 +8295,76 @@ swipe
 animation
 -
 enabled
+:
+true
+"
+)
+;
+expression_should_not_be_parseable
+(
+"
+-
+moz
+-
+gtk
+-
+csd
+-
+available
+:
+true
+"
+)
+;
+expression_should_not_be_parseable
+(
+"
+-
+moz
+-
+gtk
+-
+csd
+-
+minimize
+-
+button
+:
+true
+"
+)
+;
+expression_should_not_be_parseable
+(
+"
+-
+moz
+-
+gtk
+-
+csd
+-
+maximize
+-
+button
+:
+true
+"
+)
+;
+expression_should_not_be_parseable
+(
+"
+-
+moz
+-
+gtk
+-
+csd
+-
+close
+-
+button
 :
 true
 "
