--- a/browser/themes/shared/toolbarbuttons.inc.css
+++ b/browser/themes/shared/toolbarbuttons.inc.css
@@ -383,6 +383,24 @@ disabled
 =
 true
 ]
+:
+root
+:
+not
+(
+[
+customizing
+]
+)
+.
+toolbarbutton
+-
+1
+[
+disabled
+=
+true
+]
 #
 nav
 -
@@ -396,11 +414,6 @@ disabled
 =
 true
 ]
->
-.
-toolbarbutton
--
-icon
 #
 PanelUI
 -
@@ -412,100 +425,6 @@ disabled
 =
 true
 ]
->
-.
-toolbarbutton
--
-badge
--
-stack
->
-.
-toolbarbutton
--
-icon
-#
-main
--
-window
-:
-not
-(
-[
-customizing
-]
-)
-.
-toolbarbutton
--
-1
-[
-disabled
-=
-true
-]
->
-.
-toolbarbutton
--
-icon
-#
-main
--
-window
-:
-not
-(
-[
-customizing
-]
-)
-.
-toolbarbutton
--
-1
-[
-disabled
-=
-true
-]
->
-.
-toolbarbutton
--
-text
-#
-main
--
-window
-:
-not
-(
-[
-customizing
-]
-)
-.
-toolbarbutton
--
-1
-[
-disabled
-=
-true
-]
->
-.
-toolbarbutton
--
-badge
--
-stack
->
-.
-toolbarbutton
--
-icon
 {
 opacity
 :
