Bug 1413979 - Remove bogus styles from tree.css on Linux. r=johannh
There's a bunch of borders that aren't used because of -moz-appearance, and treecols have extra padding that shouldn't be there because -moz-appearance takes care of that. For treecol[dragging="true"] we set color: ThreeDHighlight on the assumption that background-color is ThreeDShadow, but that background-color isn't used either because of -moz-appearance.

MozReview-Commit-ID: GNt0vcdawtz

UltraBlame original commit: db515817640406651cd36558eac1f0e39c4493a9

--- a/toolkit/themes/linux/global/tree.css
+++ b/toolkit/themes/linux/global/tree.css
@@ -30,61 +30,8 @@ tree
 {
 margin
 :
-0px
+0
 4px
-;
-border
-:
-2px
-solid
-;
--
-moz
--
-border
--
-top
--
-colors
-:
-ThreeDShadow
-ThreeDDarkShadow
-;
--
-moz
--
-border
--
-right
--
-colors
-:
-ThreeDHighlight
-ThreeDLightShadow
-;
--
-moz
--
-border
--
-bottom
--
-colors
-:
-ThreeDHighlight
-ThreeDLightShadow
-;
--
-moz
--
-border
--
-left
--
-colors
-:
-ThreeDShadow
-ThreeDDarkShadow
 ;
 background
 -
@@ -388,9 +335,7 @@ cell
 {
 padding
 :
-0px
-2px
-0px
+0
 2px
 ;
 }
@@ -501,9 +446,7 @@ transparent
 ;
 padding
 :
-0px
-1px
-0px
+0
 1px
 ;
 }
@@ -536,8 +479,7 @@ transparent
 ;
 padding
 :
-0px
-1px
+0
 1px
 1px
 ;
@@ -1284,79 +1226,12 @@ pack
 :
 center
 ;
-border
-:
-2px
-solid
-;
--
-moz
--
-border
--
-top
--
-colors
-:
-ThreeDHighlight
-ThreeDLightShadow
-;
--
-moz
--
-border
--
-right
--
-colors
-:
-ThreeDDarkShadow
-ThreeDShadow
-;
--
-moz
--
-border
--
-bottom
--
-colors
-:
-ThreeDDarkShadow
-ThreeDShadow
-;
--
-moz
--
-border
--
-left
--
-colors
-:
-ThreeDHighlight
-ThreeDLightShadow
-;
-background
--
-color
-:
--
-moz
--
-Dialog
-;
 color
 :
 -
 moz
 -
 DialogText
-;
-padding
-:
-0px
-2px
 ;
 }
 treecol
@@ -1381,7 +1256,7 @@ image
 {
 padding
 :
-0px
+0
 1px
 ;
 }
@@ -1392,7 +1267,7 @@ text
 {
 margin
 :
-0px
+0
 !
 important
 ;
@@ -1413,160 +1288,6 @@ appearance
 :
 none
 ;
-border
-:
-none
-;
-padding
-:
-0
-;
-}
-treecol
-:
-hover
-:
-active
-treecolpicker
-:
-hover
-:
-active
-{
-color
-:
-ButtonText
-;
-border
-:
-2px
-solid
-;
--
-moz
--
-border
--
-top
--
-colors
-:
-ThreeDShadow
--
-moz
--
-Dialog
-;
--
-moz
--
-border
--
-right
--
-colors
-:
-ThreeDShadow
-transparent
-;
--
-moz
--
-border
--
-bottom
--
-colors
-:
-ThreeDShadow
-transparent
-;
--
-moz
--
-border
--
-left
--
-colors
-:
-ThreeDShadow
--
-moz
--
-Dialog
-;
-padding
--
-top
-:
-0px
-;
-padding
--
-bottom
-:
-0px
-;
-padding
--
-inline
--
-start
-:
-3px
-;
-padding
--
-inline
--
-end
-:
-1px
-;
-}
-.
-treecol
--
-image
-:
-hover
-:
-active
-{
-padding
-:
-0px
-;
-padding
--
-inline
--
-start
-:
-2px
-;
-}
-treecol
-:
-hover
-:
-active
-.
-treecol
--
-text
-{
-margin
-:
-1px
-0px
--
-1px
-0px
-!
-important
-;
 }
 treecol
 [
@@ -1577,175 +1298,9 @@ true
 "
 ]
 {
--
-moz
--
-border
--
-top
--
-colors
-:
-ThreeDDarkShadow
-transparent
-!
-important
-;
--
-moz
--
-border
--
-right
--
-colors
-:
-ThreeDDarkShadow
-transparent
-!
-important
-;
--
-moz
--
-border
--
-bottom
--
-colors
-:
-ThreeDDarkShadow
-transparent
-!
-important
-;
--
-moz
--
-border
--
-left
--
-colors
-:
-ThreeDDarkShadow
-transparent
-!
-important
-;
-background
--
 color
 :
-ThreeDShadow
-!
-important
-;
-color
-:
-ThreeDHighlight
-!
-important
-;
-}
-treecol
-[
-insertafter
-=
-"
-true
-"
-]
-:
--
-moz
--
-locale
--
-dir
-(
-ltr
-)
-treecol
-[
-insertbefore
-=
-"
-true
-"
-]
-:
--
-moz
--
-locale
--
-dir
-(
-rtl
-)
-{
--
-moz
--
-border
--
-right
--
-colors
-:
-ThreeDDarkShadow
-ThreeDShadow
-;
-}
-treecol
-[
-insertafter
-=
-"
-true
-"
-]
-:
--
-moz
--
-locale
--
-dir
-(
-rtl
-)
-treecol
-[
-insertbefore
-=
-"
-true
-"
-]
-:
--
-moz
--
-locale
--
-dir
-(
-ltr
-)
-{
--
-moz
--
-border
--
-left
--
-colors
-:
-ThreeDDarkShadow
-ThreeDShadow
+Graytext
 ;
 }
 treechildren
@@ -2181,50 +1736,6 @@ border
 :
 1px
 solid
-Highlight
-;
--
-moz
--
-border
--
-top
--
-colors
-:
-Highlight
-;
--
-moz
--
-border
--
-bottom
--
-colors
-:
-Highlight
-;
--
-moz
--
-border
--
-left
--
-colors
-:
-Highlight
-;
--
-moz
--
-border
--
-right
--
-colors
-:
 Highlight
 ;
 margin
