Backed out changeset 4e49de4bbc6f (bug 1411640) for failing browser-chrome's browser/base/content/test/static/browser_all_files_referenced.js, at least on Windows. r=backout on a CLOSED TREE
UltraBlame original commit: 4dc4eae45e0a8c6562692a8509b512a8b6a088cb

--- a/toolkit/themes/linux/global/radio.css
+++ b/toolkit/themes/linux/global/radio.css
@@ -37,6 +37,40 @@ radio
 -
 container
 ;
+margin
+:
+2px
+4px
+;
+border
+-
+left
+:
+2px
+transparent
+;
+border
+-
+right
+:
+2px
+transparent
+;
+}
+.
+radio
+-
+spacer
+-
+box
+{
+-
+moz
+-
+appearance
+:
+radio
+;
 -
 moz
 -
@@ -49,36 +83,33 @@ center
 margin
 :
 2px
-4px
 ;
-}
-radio
-:
-hover
-{
-color
-:
+border
 -
-moz
--
-buttonhovertext
+right
+:
+2px
+solid
+transparent
 ;
 }
 .
 radio
 -
-check
+label
+-
+center
+-
+box
 {
 -
 moz
 -
-appearance
+box
+-
+align
 :
-radio
-;
-margin
-:
-2px
+center
 ;
 }
 .
@@ -141,12 +172,55 @@ radio
 -
 label
 -
+center
+-
+box
+>
+.
+radio
+-
+label
+-
 box
 {
-outline
+border
 :
 1px
 dotted
+ThreeDDarkShadow
+;
+}
+radio
+[
+disabled
+=
+"
+true
+"
+]
+>
+.
+radio
+-
+spacer
+-
+box
+>
+.
+radio
+-
+check
+-
+box1
+{
+background
+-
+color
+:
+-
+moz
+-
+Dialog
 ;
 }
 radio
@@ -162,4 +236,324 @@ color
 :
 GrayText
 ;
+}
+.
+radio
+-
+check
+-
+box1
+{
+border
+-
+top
+:
+1px
+solid
+ThreeDShadow
+;
+border
+-
+right
+:
+1px
+solid
+ThreeDHighlight
+;
+border
+-
+bottom
+:
+1px
+solid
+ThreeDHighlight
+;
+border
+-
+left
+:
+1px
+solid
+ThreeDShadow
+;
+border
+-
+radius
+:
+50
+%
+;
+min
+-
+width
+:
+12px
+;
+min
+-
+height
+:
+12px
+;
+background
+-
+color
+:
+-
+moz
+-
+Field
+;
+}
+.
+radio
+-
+check
+-
+box2
+{
+border
+-
+top
+:
+1px
+solid
+ThreeDDarkShadow
+;
+border
+-
+right
+:
+1px
+solid
+ThreeDLightShadow
+;
+border
+-
+bottom
+:
+1px
+solid
+ThreeDLightShadow
+;
+border
+-
+left
+:
+1px
+solid
+ThreeDDarkShadow
+;
+border
+-
+radius
+:
+50
+%
+;
+padding
+:
+2px
+;
+width
+:
+4px
+;
+height
+:
+4px
+;
+list
+-
+style
+-
+image
+:
+none
+;
+}
+radio
+:
+not
+(
+[
+disabled
+=
+"
+true
+"
+]
+)
+:
+hover
+{
+color
+:
+-
+moz
+-
+buttonhovertext
+;
+text
+-
+shadow
+:
+none
+;
+}
+radio
+:
+hover
+:
+active
+>
+.
+radio
+-
+spacer
+-
+box
+>
+.
+radio
+-
+check
+-
+box1
+{
+background
+-
+color
+:
+-
+moz
+-
+Dialog
+;
+}
+radio
+[
+selected
+=
+"
+true
+"
+]
+>
+.
+radio
+-
+spacer
+-
+box
+>
+.
+radio
+-
+check
+-
+box1
+>
+.
+radio
+-
+check
+-
+box2
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+radio
+/
+radio
+-
+check
+.
+gif
+"
+)
+;
+}
+radio
+[
+selected
+=
+"
+true
+"
+]
+[
+disabled
+=
+"
+true
+"
+]
+>
+.
+radio
+-
+spacer
+-
+box
+>
+.
+radio
+-
+check
+-
+box1
+>
+.
+radio
+-
+check
+-
+box2
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+radio
+/
+radio
+-
+check
+-
+dis
+.
+gif
+"
+)
+!
+important
 }
