--- a/toolkit/themes/windows/global/in-content/common.css
+++ b/toolkit/themes/windows/global/in-content/common.css
@@ -70,9 +70,6 @@ bottom
 xul
 |
 checkbox
-xul
-|
-radio
 {
 padding
 -
@@ -102,13 +99,6 @@ xul
 *
 .
 checkbox
--
-check
-xul
-|
-*
-.
-radio
 -
 check
 {
@@ -151,6 +141,75 @@ moz
 dialog
 ;
 }
+}
+xul
+|
+radio
+{
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+content
+/
+bindings
+/
+radio
+.
+xml
+#
+radio
+"
+)
+;
+padding
+-
+inline
+-
+start
+:
+0
+;
+}
+media
+(
+-
+moz
+-
+windows
+-
+default
+-
+theme
+:
+0
+)
+{
+xul
+|
+*
+.
+radio
+-
+check
+{
+background
+-
+image
+:
+none
+;
+}
 xul
 |
 *
@@ -184,7 +243,40 @@ xul
 |
 *
 .
+radio
+-
+icon
+xul
+|
+*
+.
+checkbox
+-
+icon
+{
+margin
+-
+inline
+-
+end
+:
+0
+;
+}
+xul
+|
+*
+.
 menulist
+-
+label
+-
+box
+xul
+|
+*
+.
+radio
 -
 label
 -
@@ -211,6 +303,26 @@ xul
 *
 .
 menulist
+-
+label
+-
+box
+xul
+|
+radio
+[
+focused
+=
+"
+true
+"
+]
+>
+xul
+|
+*
+.
+radio
 -
 label
 -
