--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -9586,6 +9586,30 @@ subviewradio
 -
 moz
 -
+binding
+:
+url
+(
+chrome
+:
+/
+/
+global
+/
+content
+/
+bindings
+/
+radio
+.
+xml
+#
+radio
+)
+;
+-
+moz
+-
 appearance
 :
 none
