--- a/toolkit/themes/linux/global/global.css
+++ b/toolkit/themes/linux/global/global.css
@@ -44,6 +44,37 @@ xul
 "
 )
 ;
+radio
+{
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+globalBindings
+.
+xml
+#
+radio
+-
+with
+-
+spacing
+"
+)
+;
+}
 menulist
 >
 menupopup
