--- a/toolkit/themes/linux/global/in-content/common.css
+++ b/toolkit/themes/linux/global/in-content/common.css
@@ -259,13 +259,6 @@ xul
 checkbox
 -
 check
-xul
-|
-*
-.
-radio
--
-check
 {
 background
 -
@@ -304,6 +297,61 @@ color
 moz
 -
 dialog
+;
+}
+xul
+|
+radio
+{
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+content
+/
+bindings
+/
+radio
+.
+xml
+#
+radio
+"
+)
+;
+-
+moz
+-
+box
+-
+align
+:
+center
+;
+}
+xul
+|
+*
+.
+radio
+-
+check
+{
+background
+-
+image
+:
+none
 ;
 }
 xul
@@ -439,6 +487,26 @@ xul
 *
 .
 menulist
+-
+label
+-
+box
+xul
+|
+radio
+[
+focused
+=
+"
+true
+"
+]
+>
+xul
+|
+*
+.
+radio
 -
 label
 -
