Bug 1411906 - add close button to about:devtools if devtools are disabled;r=nchevobbe
A close button on the starting page of the devtools onboarding flow
will be helpful for users who triggered the shortcut by mistake and
would like to escape the flow.

MozReview-Commit-ID: 7rZ50jFepJ3

UltraBlame original commit: 6f1e32b85be2e46a8167c3d9945df58e461e8adb

--- a/devtools/shim/aboutdevtools/aboutdevtools.css
+++ b/devtools/shim/aboutdevtools/aboutdevtools.css
@@ -39,6 +39,75 @@ d7d7db
 ;
 -
 -
+grey
+-
+90
+:
+#
+0c0c0d
+;
+-
+-
+grey
+-
+90
+-
+alpha
+-
+10
+:
+rgba
+(
+12
+12
+13
+0
+.
+1
+)
+;
+-
+-
+grey
+-
+90
+-
+alpha
+-
+20
+:
+rgba
+(
+12
+12
+13
+0
+.
+2
+)
+;
+-
+-
+grey
+-
+90
+-
+alpha
+-
+30
+:
+rgba
+(
+12
+12
+13
+0
+.
+3
+)
+;
+-
+-
 white
 :
 #
@@ -471,14 +540,38 @@ height
 ;
 }
 .
-installpage
+buttons
 -
-button
+container
 {
 display
 :
-block
+flex
 ;
+}
+.
+buttons
+-
+container
+button
+:
+not
+(
+:
+last
+-
+child
+)
+{
+margin
+-
+right
+:
+10px
+;
+}
+button
+{
 margin
 :
 2em
@@ -519,6 +612,48 @@ height
 :
 21px
 ;
+cursor
+:
+pointer
+;
+box
+-
+shadow
+:
+0
+1px
+0
+rgba
+(
+0
+0
+0
+0
+.
+23
+)
+;
+}
+button
+:
+:
+-
+moz
+-
+focus
+-
+inner
+{
+border
+:
+0
+;
+}
+.
+primary
+-
+button
+{
 background
 -
 color
@@ -541,30 +676,9 @@ var
 white
 )
 ;
-box
--
-shadow
-:
-0
-1px
-0
-rgba
-(
-0
-0
-0
-0
-.
-23
-)
-;
-cursor
-:
-pointer
-;
 }
 .
-installpage
+primary
 -
 button
 :
@@ -586,13 +700,13 @@ blue
 )
 }
 .
-installpage
+primary
 -
 button
 :
 active
 .
-installpage
+primary
 -
 button
 :
@@ -600,7 +714,7 @@ hover
 :
 active
 .
-installpage
+primary
 -
 button
 :
@@ -625,21 +739,95 @@ blue
 ;
 }
 .
-installpage
+default
+-
+button
+{
+background
+-
+color
+:
+var
+(
+-
+-
+grey
+-
+90
+-
+alpha
+-
+10
+)
+;
+}
+.
+default
 -
 button
 :
+enabled
 :
--
-moz
--
-focus
--
-inner
+hover
 {
-border
+background
+-
+color
 :
-0
+var
+(
+-
+-
+grey
+-
+90
+-
+alpha
+-
+20
+)
+}
+.
+default
+-
+button
+:
+active
+.
+default
+-
+button
+:
+hover
+:
+active
+.
+default
+-
+button
+:
+enabled
+:
+hover
+:
+active
+{
+background
+-
+color
+:
+var
+(
+-
+-
+grey
+-
+90
+-
+alpha
+-
+30
+)
 ;
 }
 [
