Bug 1918437 - Disable secondary actions based switch to tab. r=daisuke,desktop-theme-reviewers,urlbar-reviewers,dao
Differential Revision: https://phabricator.services.mozilla.com/D223704

UltraBlame original commit: b9ff9648c7c589023158322886879afe99e51191

--- a/browser/themes/shared/urlbarView.css
+++ b/browser/themes/shared/urlbarView.css
@@ -6520,38 +6520,6 @@ urlbarView
 -
 action
 {
-color
-:
-var
-(
--
--
-urlbar
--
-box
--
-text
--
-color
-)
-;
-background
--
-color
-:
-var
-(
--
--
-urlbar
--
-box
--
-focus
--
-bgcolor
-)
-;
 border
 -
 radius
@@ -6602,6 +6570,77 @@ padding
 6px
 ;
 }
+/
+*
+stylelint
+-
+disable
+-
+next
+-
+line
+media
+-
+query
+-
+no
+-
+invalid
+*
+/
+media
+not
+(
+-
+moz
+-
+bool
+-
+pref
+:
+"
+browser
+.
+urlbar
+.
+scotchBonnet
+.
+enableOverride
+"
+)
+{
+color
+:
+var
+(
+-
+-
+urlbar
+-
+box
+-
+text
+-
+color
+)
+;
+background
+-
+color
+:
+var
+(
+-
+-
+urlbar
+-
+box
+-
+focus
+-
+bgcolor
+)
+;
 &
 .
 urlbarView
@@ -6616,6 +6655,226 @@ top
 ;
 }
 }
+/
+*
+stylelint
+-
+disable
+-
+next
+-
+line
+media
+-
+query
+-
+no
+-
+invalid
+*
+/
+media
+(
+-
+moz
+-
+bool
+-
+pref
+:
+"
+browser
+.
+urlbar
+.
+scotchBonnet
+.
+enableOverride
+"
+)
+{
+-
+moz
+-
+context
+-
+properties
+:
+fill
+fill
+-
+opacity
+;
+color
+:
+var
+(
+-
+-
+toolbar
+-
+field
+-
+focus
+-
+color
+)
+;
+border
+:
+1px
+solid
+var
+(
+-
+-
+urlbarView
+-
+separator
+-
+color
+)
+;
+padding
+-
+inline
+-
+start
+:
+calc
+(
+var
+(
+-
+-
+urlbarView
+-
+favicon
+-
+width
+)
++
+8px
+)
+;
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+firefoxview
+/
+view
+-
+opentabs
+.
+svg
+"
+)
+;
+background
+-
+repeat
+:
+no
+-
+repeat
+;
+background
+-
+position
+:
+4px
+center
+;
+background
+-
+size
+:
+var
+(
+-
+-
+urlbarView
+-
+favicon
+-
+width
+)
+;
+&
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+background
+-
+position
+-
+x
+:
+right
+4px
+;
+}
+}
+}
+/
+*
+stylelint
+-
+disable
+-
+next
+-
+line
+media
+-
+query
+-
+no
+-
+invalid
+*
+/
+media
+not
+(
+-
+moz
+-
+bool
+-
+pref
+:
+"
+browser
+.
+urlbar
+.
+scotchBonnet
+.
+enableOverride
+"
+)
+{
 &
 :
 is
@@ -6684,6 +6943,7 @@ background
 color
 )
 ;
+}
 }
 }
 .
