Bug 1917273 - Add GeckoSession API to get web compat info from toolkit r=geckoview-reviewers,tthibaud,ohall
Differential Revision: https://phabricator.services.mozilla.com/D222683

UltraBlame original commit: befea9a972e2fd720c8c8cdb1ed6aaedeab8603e

--- a/mobile/android/geckoview_example/src/main/res/menu/actions.xml
+++ b/mobile/android/geckoview_example/src/main/res/menu/actions.xml
@@ -487,6 +487,29 @@ title
 "
 string
 /
+webcompat_info
+"
+android
+:
+id
+=
+"
++
+id
+/
+webcompat_info
+"
+/
+>
+<
+item
+android
+:
+title
+=
+"
+string
+/
 settings
 "
 android
