--- a/browser/components/profiles/content/edit-profile-card.css
+++ b/browser/components/profiles/content/edit-profile-card.css
@@ -242,19 +242,27 @@ var
 (
 -
 -
-button
--
-background
+outline
 -
 color
 -
-destructive
+error
 )
 ;
 }
 }
-#
-error
+.
+message
+-
+parent
+{
+position
+:
+relative
+;
+}
+.
+message
 {
 display
 :
@@ -284,34 +292,31 @@ space
 xsmall
 )
 ;
-color
+position
 :
-var
-(
+absolute
+;
+inset
 -
+inline
 -
-button
--
-background
--
-color
--
-destructive
-)
+start
+:
+0
 ;
 &
 [
 hidden
 ]
 {
-display
+visibility
 :
-none
+hidden
 ;
 }
 >
-#
-error
+.
+message
 -
 icon
 {
@@ -334,6 +339,48 @@ stroke
 currentColor
 ;
 }
+}
+#
+error
+-
+icon
+#
+error
+-
+message
+{
+color
+:
+var
+(
+-
+-
+icon
+-
+color
+-
+critical
+)
+;
+}
+#
+saved
+-
+icon
+{
+color
+:
+var
+(
+-
+-
+icon
+-
+color
+-
+success
+)
+;
 }
 #
 themes
