Bug 1920852: Add closing tabs remotely to Firefox View r=lina,fxview-reviewers,jsudiaman
Differential Revision: https://phabricator.services.mozilla.com/D223448

UltraBlame original commit: a588c633d90bfaaff39863cf6ab534dc0bac5ea7

--- a/browser/components/firefoxview/firefoxview.html
+++ b/browser/components/firefoxview/firefoxview.html
@@ -206,6 +206,44 @@ localization
 href
 =
 "
+browser
+/
+sidebar
+.
+ftl
+"
+/
+>
+<
+link
+rel
+=
+"
+localization
+"
+href
+=
+"
+toolkit
+/
+global
+/
+textActions
+.
+ftl
+"
+/
+>
+<
+link
+rel
+=
+"
+localization
+"
+href
+=
+"
 toolkit
 /
 branding
