--- a/browser/components/firefoxview/fxview-tab-row.css
+++ b/browser/components/firefoxview/fxview-tab-row.css
@@ -912,6 +912,33 @@ svg
 "
 )
 ;
+-
+moz
+-
+context
+-
+properties
+:
+fill
+;
+fill
+:
+currentColor
+;
+background
+-
+repeat
+:
+no
+-
+repeat
+;
+background
+-
+position
+:
+center
+;
 }
 .
 fxview
@@ -995,5 +1022,37 @@ font
 weight
 :
 400
+;
+}
+.
+fxview
+-
+tab
+-
+row
+-
+button
+.
+dismiss
+-
+button
+.
+fxview
+-
+tab
+-
+row
+-
+button
+.
+undo
+-
+button
+{
+justify
+-
+self
+:
+end
 ;
 }
