--- a/toolkit/components/glean/build_scripts/glean_parser_ext/templates/rust.jinja2
+++ b/toolkit/components/glean/build_scripts/glean_parser_ext/templates/rust.jinja2
@@ -2499,6 +2499,43 @@ metric_id
 =
 >
 {
+assert
+!
+(
+extra_keys_len
+(
+&
+super
+:
+:
+{
+{
+event
+}
+}
+)
+!
+=
+0
+|
+|
+extra
+.
+is_empty
+(
+)
+"
+No
+extra
+keys
+allowed
+but
+some
+were
+passed
+"
+)
+;
 super
 :
 :
