Bug 1899598 - Hide the horizontal tab strip when vertical tabs are enabled. r=mconley,desktop-theme-reviewers,tabbrowser-reviewers,sidebar-reviewers,emilio,willdurand,sclements
* Remove the #titlebar element, and ensure toolbars that comprise the titlebar get a .browser-titlebar class
* Ensure we call TabBarVisibility.update when initializing with verticalTab=true
* Adjust TabBarVisibility logic so we allow for the vertical tabs case
* Give #navigator-toolbar z-index: var(--browser-area-z-index-toolbox) to ensure the urlbar view doesnt get clipped behind the lower elements

Differential Revision: https://phabricator.services.mozilla.com/D222059

UltraBlame original commit: 98b6ddc6deed7058d61ad2cce5b2473f11e7be9a

--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -994,18 +994,14 @@ height
 0
 ;
 }
-#
-TabsToolbar
-#
-toolbar
+.
+browser
 -
-menubar
+titlebar
 #
 main
 -
 menubar
-#
-titlebar
 {
 appearance
 :
