Backed out changeset 98b6ddc6deed (bug 1899598) for causing marionette failures on test_initialize_vertical_tabs.py. CLOSED TREE
UltraBlame original commit: d582bd2b20c70e5592465ea1ebd979bd65f2157e

--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -994,14 +994,18 @@ height
 0
 ;
 }
-.
-browser
+#
+TabsToolbar
+#
+toolbar
 -
-titlebar
+menubar
 #
 main
 -
 menubar
+#
+titlebar
 {
 appearance
 :
