--- a/browser/themes/shared/browser-shared.css
+++ b/browser/themes/shared/browser-shared.css
@@ -1295,82 +1295,6 @@ index
 toolbox
 )
 ;
-/
-*
-stylelint
--
-disable
--
-next
--
-line
-media
--
-query
--
-no
--
-invalid
-*
-/
-media
-(
--
-moz
--
-bool
--
-pref
-:
-"
-sidebar
-.
-verticalTabs
-"
-)
-{
-/
-*
-Should
-paint
-on
-top
-of
-our
-sibling
-#
-browser
-(
-even
-when
-preceding
-it
-in
-the
-DOM
-)
-*
-/
-z
--
-index
-:
-var
-(
--
--
-browser
--
-area
--
-z
--
-index
--
-toolbox
-)
-;
-}
 background
 -
 color
@@ -1774,9 +1698,7 @@ Title
 bar
 *
 /
-.
-browser
--
+#
 titlebar
 {
 -
@@ -1939,17 +1861,9 @@ not
 inactive
 ]
 )
-~
-:
-is
-(
++
 #
 TabsToolbar
-#
-nav
--
-bar
-)
 >
 &
 {
@@ -2178,10 +2092,6 @@ none
 Hide
 the
 TabsToolbar
-/
-nav
--
-bar
 titlebar
 controls
 if
@@ -2247,67 +2157,9 @@ autohide
 false
 "
 ]
-~
-:
-is
-(
++
 #
 TabsToolbar
-#
-nav
--
-bar
-)
->
-:
-is
-(
-.
-titlebar
--
-buttonbox
--
-container
-.
-titlebar
--
-spacer
-)
-{
-display
-:
-none
-;
-}
-/
-*
-Only
-show
-the
-titlebar
-buttons
-and
-spacers
-in
-the
-first
-visible
-toolbar
-*
-/
-#
-nav
--
-bar
-:
-not
-(
-[
-tabs
--
-hidden
-]
-)
 >
 :
 is
