Bug 1901728 - Add a "Tabs from other devices" item to the tab manager. r=dao,fluent-reviewers,tabbrowser-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D220048

UltraBlame original commit: 72340909f0bd2b58be16771719006ddb4272bbe8

--- a/browser/components/tabbrowser/content/browser-allTabsMenu.inc.xhtml
+++ b/browser/components/tabbrowser/content/browser-allTabsMenu.inc.xhtml
@@ -140,6 +140,39 @@ id
 "
 allTabsMenu
 -
+syncedTabs
+"
+class
+=
+"
+subviewbutton
+"
+data
+-
+l10n
+-
+id
+=
+"
+all
+-
+tabs
+-
+menu
+-
+synced
+-
+tabs
+"
+/
+>
+<
+toolbarbutton
+id
+=
+"
+allTabsMenu
+-
 closeDuplicateTabs
 "
 class
