--- a/browser/themes/shared/sidebar.css
+++ b/browser/themes/shared/sidebar.css
@@ -61,25 +61,6 @@ sidebar
 -
 box
 {
-z
--
-index
-:
-var
-(
--
--
-browser
--
-area
--
-z
--
-index
--
-sidebar
-)
-;
 background
 -
 color
@@ -390,25 +371,6 @@ sidebar
 -
 box
 {
-z
--
-index
-:
-var
-(
--
--
-browser
--
-area
--
-z
--
-index
--
-sidebar
-)
-;
 background
 -
 color
@@ -685,27 +647,6 @@ sidebar
 -
 splitter
 {
-z
--
-index
-:
-var
-(
--
--
-browser
--
-area
--
-z
--
-index
--
-sidebar
--
-splitter
-)
-;
 -
 -
 splitter
@@ -713,6 +654,45 @@ splitter
 width
 :
 4px
+;
+/
+*
+Ensure
+the
+splitter
+is
+painted
+on
+top
+of
+the
+sidebar
+box
+it
+overlaps
+.
+Otherwise
+the
+user
+may
+be
+unable
+to
+drag
+the
+splitter
+to
+resize
+the
+sidebar
+.
+*
+/
+z
+-
+index
+:
+1
 ;
 /
 *
