Bug 1914244 - Move the allow in private browsing checkbox to the web extension permissions prompt. r=willdurand,zmckenney,geckoview-reviewers,owlish,android-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D219839

UltraBlame original commit: 8e4f5f72b094364aa0105fad346666a828376134

--- a/mobile/android/android-components/components/feature/addons/src/main/res/layout/mozac_feature_addons_fragment_dialog_addon_permissions.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/layout/mozac_feature_addons_fragment_dialog_addon_permissions.xml
@@ -88,23 +88,6 @@ res
 /
 android
 "
-android
-:
-layout_width
-=
-"
-fill_parent
-"
-android
-:
-layout_height
-=
-"
-fill_parent
-"
->
-<
-RelativeLayout
 xmlns
 :
 app
@@ -143,6 +126,23 @@ com
 /
 tools
 "
+android
+:
+layout_width
+=
+"
+fill_parent
+"
+android
+:
+layout_height
+=
+"
+fill_parent
+"
+>
+<
+RelativeLayout
 android
 :
 layout_width
@@ -578,6 +578,107 @@ visible
 /
 >
 <
+androidx
+.
+appcompat
+.
+widget
+.
+AppCompatCheckBox
+android
+:
+id
+=
+"
++
+id
+/
+allow_in_private_browsing
+"
+android
+:
+layout_width
+=
+"
+wrap_content
+"
+android
+:
+layout_height
+=
+"
+wrap_content
+"
+android
+:
+layout_below
+=
+"
+id
+/
+permissions
+"
+android
+:
+layout_alignStart
+=
+"
+id
+/
+title
+"
+android
+:
+layout_marginTop
+=
+"
+16dp
+"
+android
+:
+paddingStart
+=
+"
+5dp
+"
+android
+:
+paddingTop
+=
+"
+4dp
+"
+android
+:
+paddingEnd
+=
+"
+5dp
+"
+android
+:
+text
+=
+"
+string
+/
+mozac_feature_addons_settings_allow_in_private_browsing
+"
+android
+:
+textColor
+=
+"
+?
+android
+:
+attr
+/
+textColorPrimary
+"
+/
+>
+<
 Button
 android
 :
@@ -620,7 +721,7 @@ layout_below
 "
 id
 /
-permissions
+allow_in_private_browsing
 "
 android
 :
@@ -696,7 +797,7 @@ layout_below
 "
 id
 /
-permissions
+allow_in_private_browsing
 "
 android
 :
