--- a/toolkit/themes/shared/popupnotification.css
+++ b/toolkit/themes/shared/popupnotification.css
@@ -400,6 +400,77 @@ flex
 auto
 ;
 }
+/
+*
+*
+Ensure
+that
+host
+names
+in
+PopupNotifications
+wrap
+.
+This
+targets
+the
+"
+name
+"
+*
+element
+in
+the
+description
+container
+which
+is
+the
+"
+name
+"
+property
+of
+the
+*
+PopupNotification
+.
+Name
+is
+what
+gets
+substituted
+from
+the
+l10n
+string
+using
+*
+the
+placeholder
+<
+>
+.
+*
+/
+.
+popup
+-
+notification
+-
+description
+-
+name
+{
+word
+-
+break
+:
+break
+-
+all
+;
+}
 .
 popup
 -
