Bug 1909751 - Adjust margins for Toolbar r=android-reviewers,Roger
# Conflicts:
#	mobile/android/android-components/components/browser/toolbar/src/main/res/layout/mozac_browser_toolbar_displaytoolbar.xml

Differential Revision: https://phabricator.services.mozilla.com/D222537

UltraBlame original commit: 400dd78f97fcbf57a27d471fc37f22b037b88f46

--- a/mobile/android/android-components/components/browser/toolbar/src/main/res/layout/mozac_browser_toolbar_displaytoolbar.xml
+++ b/mobile/android/android-components/components/browser/toolbar/src/main/res/layout/mozac_browser_toolbar_displaytoolbar.xml
@@ -200,6 +200,56 @@ vertical
 "
 >
 <
+androidx
+.
+constraintlayout
+.
+widget
+.
+Guideline
+android
+:
+id
+=
+"
++
+id
+/
+mozac_browser_toolbar_start_browser
+"
+android
+:
+layout_width
+=
+"
+wrap_content
+"
+android
+:
+layout_height
+=
+"
+wrap_content
+"
+android
+:
+orientation
+=
+"
+vertical
+"
+app
+:
+layout_constraintGuide_begin
+=
+"
+dimen
+/
+mozac_browser_toolbar_start_end_margin
+"
+/
+>
+<
 !
 -
 -
@@ -252,10 +302,12 @@ layout_marginTop
 "
 app
 :
-layout_constraintStart_toStartOf
+layout_constraintStart_toEndOf
 =
 "
-parent
+id
+/
+mozac_browser_toolbar_start_browser
 "
 app
 :
@@ -1204,10 +1256,13 @@ selectableItemBackgroundBorderless
 "
 app
 :
-layout_constraintEnd_toEndOf
+layout_constraintEnd_toStartOf
 =
 "
-parent
++
+id
+/
+mozac_browser_toolbar_end_browser
 "
 app
 :
@@ -1215,6 +1270,56 @@ layout_constraintTop_toTopOf
 =
 "
 parent
+"
+/
+>
+<
+androidx
+.
+constraintlayout
+.
+widget
+.
+Guideline
+android
+:
+id
+=
+"
++
+id
+/
+mozac_browser_toolbar_end_browser
+"
+android
+:
+layout_width
+=
+"
+wrap_content
+"
+android
+:
+layout_height
+=
+"
+wrap_content
+"
+android
+:
+orientation
+=
+"
+vertical
+"
+app
+:
+layout_constraintGuide_end
+=
+"
+dimen
+/
+mozac_browser_toolbar_start_end_margin
 "
 /
 >
