--- a/mobile/android/fenix/app/src/main/res/values/dimens.xml
+++ b/mobile/android/fenix/app/src/main/res/values/dimens.xml
@@ -1220,27 +1220,18 @@ browser_fragment_download_dialog_elevation
 dimen
 >
 <
-!
--
--
-The
-size
-of
-padding
-for
-the
-display
-toolbar
-.
--
--
->
-<
 dimen
 name
 =
 "
-browser_fragment_display_toolbar_padding
+mozac_browser_toolbar_start_end_margin
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 16dp
