Bug 1899598 - Hide the horizontal tab strip when vertical tabs are enabled. r=mconley,desktop-theme-reviewers,tabbrowser-reviewers,sidebar-reviewers,emilio,willdurand,sclements
* Remove the #titlebar element, and ensure toolbars that comprise the titlebar get a .browser-titlebar class
* Ensure we call TabBarVisibility.update when initializing with verticalTab=true
* Adjust TabBarVisibility logic so we allow for the vertical tabs case
* Give #navigator-toolbar z-index: var(--browser-area-z-index-toolbox) to ensure the urlbar view doesnt get clipped behind the lower elements

Differential Revision: https://phabricator.services.mozilla.com/D222059

UltraBlame original commit: 82dacb5e3821fc0081deed13bd932839d65867e0

--- a/browser/themes/shared/browser-shared.css
+++ b/browser/themes/shared/browser-shared.css
@@ -1202,6 +1202,82 @@ appearance
 :
 none
 ;
+/
+*
+stylelint
+-
+disable
+-
+next
+-
+line
+media
+-
+query
+-
+no
+-
+invalid
+*
+/
+media
+(
+-
+moz
+-
+bool
+-
+pref
+:
+"
+sidebar
+.
+verticalTabs
+"
+)
+{
+/
+*
+Should
+paint
+on
+top
+of
+our
+sibling
+#
+browser
+(
+even
+when
+preceding
+it
+in
+the
+DOM
+)
+*
+/
+z
+-
+index
+:
+var
+(
+-
+-
+browser
+-
+area
+-
+z
+-
+index
+-
+toolbox
+)
+;
+}
 background
 -
 color
@@ -1605,7 +1681,9 @@ Title
 bar
 *
 /
-#
+.
+browser
+-
 titlebar
 {
 -
@@ -1768,9 +1846,17 @@ not
 inactive
 ]
 )
-+
+~
+:
+is
+(
 #
 TabsToolbar
+#
+nav
+-
+bar
+)
 >
 &
 {
@@ -1999,6 +2085,10 @@ none
 Hide
 the
 TabsToolbar
+/
+nav
+-
+bar
 titlebar
 controls
 if
@@ -2064,9 +2154,67 @@ autohide
 false
 "
 ]
-+
+~
+:
+is
+(
 #
 TabsToolbar
+#
+nav
+-
+bar
+)
+>
+:
+is
+(
+.
+titlebar
+-
+buttonbox
+-
+container
+.
+titlebar
+-
+spacer
+)
+{
+display
+:
+none
+;
+}
+/
+*
+Only
+show
+the
+titlebar
+buttons
+and
+spacers
+in
+the
+first
+visible
+toolbar
+*
+/
+#
+nav
+-
+bar
+:
+not
+(
+[
+tabs
+-
+hidden
+]
+)
 >
 :
 is
