--- a/browser/themes/shared/toolbarbutton-icons.css
+++ b/browser/themes/shared/toolbarbutton-icons.css
@@ -1848,6 +1848,41 @@ sidebar
 -
 button
 {
+/
+*
+stylelint
+-
+disable
+-
+next
+-
+line
+media
+-
+query
+-
+no
+-
+invalid
+*
+/
+media
+not
+(
+-
+moz
+-
+bool
+-
+pref
+:
+"
+sidebar
+.
+revamp
+"
+)
+{
 list
 -
 style
@@ -1873,11 +1908,7 @@ svg
 "
 )
 ;
-}
-#
-sidebar
--
-button
+&
 :
 -
 moz
@@ -1895,10 +1926,7 @@ not
 positionend
 ]
 )
-#
-sidebar
--
-button
+&
 :
 -
 moz
@@ -1936,6 +1964,329 @@ svg
 "
 )
 ;
+}
+}
+/
+*
+stylelint
+-
+disable
+-
+next
+-
+line
+media
+-
+query
+-
+no
+-
+invalid
+*
+/
+media
+(
+-
+moz
+-
+bool
+-
+pref
+:
+"
+sidebar
+.
+revamp
+"
+)
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+sidebar
+-
+collapsed
+-
+right
+.
+svg
+"
+)
+;
+&
+:
+hover
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+sidebar
+-
+expanded
+-
+right
+.
+svg
+"
+)
+;
+}
+&
+[
+expanded
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+sidebar
+-
+expanded
+-
+right
+.
+svg
+"
+)
+;
+&
+:
+hover
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+sidebar
+-
+collapsed
+-
+right
+.
+svg
+"
+)
+;
+}
+}
+&
+:
+-
+moz
+-
+locale
+-
+dir
+(
+ltr
+)
+:
+not
+(
+[
+positionend
+]
+)
+&
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+[
+positionend
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+sidebar
+-
+collapsed
+.
+svg
+"
+)
+;
+&
+:
+hover
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+sidebar
+-
+expanded
+.
+svg
+"
+)
+;
+}
+&
+[
+expanded
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+sidebar
+-
+expanded
+.
+svg
+"
+)
+;
+/
+*
+stylelint
+-
+disable
+max
+-
+nesting
+-
+depth
+*
+/
+&
+:
+hover
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+sidebar
+-
+collapsed
+.
+svg
+"
+)
+;
+}
+}
+}
+}
 }
 #
 panic
