Bug 1922147 - Use only textareas for ASRouterAdmin targeting editors. r=omc-reviewers,emcminn
Differential Revision: https://phabricator.services.mozilla.com/D224270

UltraBlame original commit: 05bbb502506b7f3fc0ff339b7f6c0f9898e0877f

--- a/browser/components/asrouter/content-src/components/ASRouterAdmin/ASRouterAdmin.scss
+++ b/browser/components/asrouter/content-src/components/ASRouterAdmin/ASRouterAdmin.scss
@@ -1997,6 +1997,27 @@ margin
 ;
 }
 .
+targeting
+-
+editor
+{
+resize
+:
+vertical
+;
+&
+.
+small
+{
+white
+-
+space
+:
+nowrap
+;
+}
+}
+.
 impressions
 -
 section
