--- a/browser/components/asrouter/content/components/ASRouterAdmin/ASRouterAdmin.css
+++ b/browser/components/asrouter/content/components/ASRouterAdmin/ASRouterAdmin.css
@@ -2421,6 +2421,38 @@ asrouter
 -
 admin
 .
+targeting
+-
+editor
+{
+resize
+:
+vertical
+;
+}
+.
+asrouter
+-
+admin
+.
+targeting
+-
+editor
+.
+small
+{
+white
+-
+space
+:
+nowrap
+;
+}
+.
+asrouter
+-
+admin
+.
 impressions
 -
 section
