Bug 1922447 - [devtools] Use light-dark in aboutdebugging base.css. r=devtools-reviewers,jdescottes.
There was also a typo in `--in-content-background-color`, where the declared
color was missing the pound character.
To be consistent with the other about:* pages, we set it as white in light mode.

Differential Revision: https://phabricator.services.mozilla.com/D224291

UltraBlame original commit: f2de27a44f81d0769f4b0710ad0fbb10184cc9ee

--- a/devtools/client/aboutdebugging/src/base.css
+++ b/devtools/client/aboutdebugging/src/base.css
@@ -78,7 +78,19 @@ background
 -
 color
 :
-f9f9fa
+light
+-
+dark
+(
+#
+fff
+rgb
+(
+28
+27
+34
+)
+)
 ;
 -
 -
@@ -90,8 +102,22 @@ border
 -
 color
 :
+light
+-
+dark
+(
 #
 d7d7db
+rgba
+(
+249
+249
+250
+0
+.
+2
+)
+)
 ;
 -
 -
@@ -105,11 +131,18 @@ button
 -
 background
 :
+light
+-
+dark
+(
 rgb
 (
 0
 97
 224
+)
+#
+00ddff
 )
 ;
 -
@@ -126,11 +159,22 @@ background
 -
 active
 :
+light
+-
+dark
+(
 rgb
 (
 5
 62
 148
+)
+rgb
+(
+170
+242
+255
+)
 )
 ;
 -
@@ -147,11 +191,22 @@ background
 -
 hover
 :
+light
+-
+dark
+(
 rgb
 (
 2
 80
 187
+)
+rgb
+(
+128
+235
+255
+)
 )
 ;
 -
@@ -164,8 +219,15 @@ text
 -
 color
 :
+light
+-
+dark
+(
 #
 0c0c0d
+#
+eee
+)
 ;
 -
 -
@@ -213,6 +275,10 @@ text
 -
 color
 :
+light
+-
+dark
+(
 var
 (
 -
@@ -220,6 +286,13 @@ var
 grey
 -
 50
+)
+rgb
+(
+168
+168
+168
+)
 )
 ;
 -
@@ -247,8 +320,19 @@ box
 -
 background
 :
+light
+-
+dark
+(
 #
 fff
+rgb
+(
+35
+34
+43
+)
+)
 ;
 -
 -
@@ -279,6 +363,10 @@ background
 -
 color
 :
+light
+-
+dark
+(
 var
 (
 -
@@ -289,7 +377,6 @@ grey
 -
 a10
 )
-;
 /
 *
 Note
@@ -302,12 +389,24 @@ Default
 button
 *
 /
+rgb
+(
+72
+72
+84
+)
+)
+;
 -
 -
 button
 -
 color
 :
+light
+-
+dark
+(
 var
 (
 -
@@ -316,7 +415,6 @@ grey
 -
 90
 )
-;
 /
 *
 Note
@@ -329,6 +427,16 @@ Default
 button
 *
 /
+var
+(
+-
+-
+white
+-
+100
+)
+)
+;
 -
 -
 button
@@ -339,6 +447,10 @@ background
 -
 color
 :
+light
+-
+dark
+(
 var
 (
 -
@@ -349,7 +461,6 @@ grey
 -
 a20
 )
-;
 /
 *
 Note
@@ -362,6 +473,14 @@ Default
 button
 *
 /
+rgb
+(
+92
+92
+106
+)
+)
+;
 -
 -
 button
@@ -419,11 +538,24 @@ category
 -
 text
 :
+light
+-
+dark
+(
 rgba
 (
 12
 12
 13
+)
+var
+(
+-
+-
+text
+-
+color
+)
 )
 ;
 -
@@ -457,6 +589,10 @@ text
 -
 color
 :
+light
+-
+dark
+(
 var
 (
 -
@@ -465,6 +601,15 @@ grey
 -
 50
 )
+var
+(
+-
+-
+text
+-
+color
+)
+)
 ;
 -
 -
@@ -474,6 +619,10 @@ text
 -
 color
 :
+light
+-
+dark
+(
 var
 (
 -
@@ -481,6 +630,15 @@ var
 category
 -
 text
+)
+var
+(
+-
+-
+text
+-
+color
+)
 )
 ;
 -
@@ -510,6 +668,10 @@ background
 -
 hover
 :
+light
+-
+dark
+(
 var
 (
 -
@@ -519,6 +681,13 @@ category
 background
 -
 hover
+)
+rgb
+(
+92
+92
+106
+)
 )
 ;
 -
@@ -529,6 +698,10 @@ background
 -
 color
 :
+light
+-
+dark
+(
 var
 (
 -
@@ -536,6 +709,13 @@ var
 white
 -
 100
+)
+rgb
+(
+35
+34
+43
+)
 )
 ;
 -
@@ -546,6 +726,10 @@ separator
 -
 color
 :
+light
+-
+dark
+(
 var
 (
 -
@@ -553,6 +737,15 @@ var
 grey
 -
 20
+)
+var
+(
+-
+-
+grey
+-
+50
+)
 )
 ;
 /
@@ -623,6 +816,10 @@ ok
 -
 color
 :
+light
+-
+dark
+(
 var
 (
 -
@@ -630,6 +827,15 @@ var
 green
 -
 70
+)
+var
+(
+-
+-
+white
+-
+100
+)
 )
 ;
 -
@@ -640,6 +846,10 @@ info
 -
 color
 :
+light
+-
+dark
+(
 var
 (
 -
@@ -648,105 +858,6 @@ grey
 -
 90
 )
-;
--
--
-link
--
-color
-:
-var
-(
--
--
-in
--
-content
--
-primary
--
-button
--
-background
-)
-;
--
--
-link
--
-color
--
-active
-:
-var
-(
--
--
-in
--
-content
--
-primary
--
-button
--
-background
--
-active
-)
-;
--
--
-link
--
-color
--
-hover
-:
-var
-(
--
--
-in
--
-content
--
-primary
--
-button
--
-background
--
-hover
-)
-;
--
--
-primary
--
-button
--
-background
--
-color
-:
-var
-(
--
--
-blue
--
-60
-)
-;
--
--
-primary
--
-button
--
-color
-:
 var
 (
 -
@@ -755,6 +866,132 @@ white
 -
 100
 )
+)
+;
+-
+-
+link
+-
+color
+:
+var
+(
+-
+-
+in
+-
+content
+-
+primary
+-
+button
+-
+background
+)
+;
+-
+-
+link
+-
+color
+-
+active
+:
+var
+(
+-
+-
+in
+-
+content
+-
+primary
+-
+button
+-
+background
+-
+active
+)
+;
+-
+-
+link
+-
+color
+-
+hover
+:
+var
+(
+-
+-
+in
+-
+content
+-
+primary
+-
+button
+-
+background
+-
+hover
+)
+;
+-
+-
+primary
+-
+button
+-
+background
+-
+color
+:
+light
+-
+dark
+(
+var
+(
+-
+-
+blue
+-
+60
+)
+#
+00ddff
+)
+;
+-
+-
+primary
+-
+button
+-
+color
+:
+light
+-
+dark
+(
+var
+(
+-
+-
+white
+-
+100
+)
+rgb
+(
+43
+42
+51
+)
+)
 ;
 -
 -
@@ -768,6 +1005,10 @@ background
 -
 color
 :
+light
+-
+dark
+(
 var
 (
 -
@@ -775,6 +1016,13 @@ var
 blue
 -
 70
+)
+rgb
+(
+128
+235
+255
+)
 )
 ;
 -
@@ -789,6 +1037,10 @@ background
 -
 color
 :
+light
+-
+dark
+(
 var
 (
 -
@@ -796,6 +1048,13 @@ var
 blue
 -
 80
+)
+rgb
+(
+170
+242
+255
+)
 )
 ;
 -
@@ -808,6 +1067,10 @@ background
 -
 color
 :
+light
+-
+dark
+(
 var
 (
 -
@@ -815,6 +1078,15 @@ var
 grey
 -
 20
+)
+var
+(
+-
+-
+grey
+-
+50
+)
 )
 ;
 -
@@ -825,6 +1097,10 @@ header
 -
 color
 :
+light
+-
+dark
+(
 var
 (
 -
@@ -832,6 +1108,15 @@ var
 grey
 -
 90
+)
+var
+(
+-
+-
+white
+-
+100
+)
 )
 ;
 /
@@ -1818,508 +2103,6 @@ unit
 2
 )
 ;
-}
-/
-*
-Dark
-Theme
-variables
-*
-/
-media
-(
-prefers
--
-color
--
-scheme
-:
-dark
-)
-{
-:
-root
-{
--
--
-in
--
-content
--
-background
--
-color
-:
-rgb
-(
-28
-27
-34
-)
-;
--
--
-in
--
-content
--
-border
--
-color
-:
-rgba
-(
-249
-249
-250
-0
-.
-2
-)
-;
--
--
-in
--
-content
--
-primary
--
-button
--
-background
-:
-#
-00ddff
-;
--
--
-in
--
-content
--
-primary
--
-button
--
-background
--
-active
-:
-rgb
-(
-170
-242
-255
-)
-;
--
--
-in
--
-content
--
-primary
--
-button
--
-background
--
-hover
-:
-rgb
-(
-128
-235
-255
-)
-;
--
--
-in
--
-content
--
-text
--
-color
-:
-#
-eee
-;
--
--
-secondary
--
-text
--
-color
-:
-rgb
-(
-168
-168
-168
-)
-;
--
--
-box
--
-background
-:
-rgb
-(
-35
-34
-43
-)
-;
--
--
-button
--
-background
--
-color
-:
-rgb
-(
-72
-72
-84
-)
-;
--
--
-button
--
-color
-:
-var
-(
--
--
-white
--
-100
-)
-;
--
--
-button
--
-hover
--
-background
--
-color
-:
-rgb
-(
-92
-92
-106
-)
-;
--
--
-category
--
-background
--
-hover
-:
-rgba
-(
-12
-12
-13
-0
-.
-1
-)
-;
--
--
-category
--
-text
-:
-var
-(
--
--
-text
--
-color
-)
-;
--
--
-fieldpair
--
-text
--
-color
-:
-var
-(
--
--
-text
--
-color
-)
-;
--
--
-sidebar
--
-text
--
-color
-:
-var
-(
--
--
-text
--
-color
-)
-;
--
--
-sidebar
--
-background
--
-hover
-:
-rgb
-(
-92
-92
-106
-)
-;
--
--
-card
--
-background
--
-color
-:
-rgb
-(
-35
-34
-43
-)
-;
--
--
-card
--
-separator
--
-color
-:
-var
-(
--
--
-grey
--
-50
-)
-;
--
--
-icon
--
-ok
--
-color
-:
-var
-(
--
--
-white
--
-100
-)
-;
--
--
-icon
--
-info
--
-color
-:
-var
-(
--
--
-white
--
-100
-)
-;
--
--
-popup
--
-header
--
-background
--
-color
-:
-var
-(
--
--
-grey
--
-50
-)
-;
--
--
-popup
--
-header
--
-color
-:
-var
-(
--
--
-white
--
-100
-)
-;
-/
-*
-*
-From
-common
-.
-inc
-.
-css
-*
-https
-:
-/
-/
-searchfox
-.
-org
-/
-mozilla
--
-central
-/
-rev
-/
-b52cf6bbe214bd9d93ed9333d0403f7d556ad7c8
-/
-toolkit
-/
-themes
-/
-shared
-/
-in
--
-content
-/
-common
-.
-inc
-.
-css
-#
-165
--
-168
-*
-/
--
--
-primary
--
-button
--
-background
--
-color
-:
-#
-00ddff
-;
--
--
-primary
--
-button
--
-color
-:
-rgb
-(
-43
-42
-51
-)
-;
--
--
-primary
--
-button
--
-active
--
-background
--
-color
-:
-rgb
-(
-170
-242
-255
-)
-;
--
--
-primary
--
-button
--
-hover
--
-background
--
-color
-:
-rgb
-(
-128
-235
-255
-)
-;
-}
 }
 /
 *
